<resources>
    <string name="app_name">GuessADigit</string>
    <string name="enter_bounds">Enter bounds</string>
    <string name="starts_from">Starts from</string>
    <string name="ends_with">Ends with</string>
    <string name="submit">Submit</string>
    <string name="less">Less</string>
    <string name="bigger">Bigger</string>
    <string name="equals">Equals</string>
    <string name="home">Try again</string>
</resources>