<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:id="@+id/output"
        android:text=""
        />
    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_more"
            android:text="@string/less"
            android:onClick="LessClick"
            android:layout_gravity="start"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_less"
            android:text="@string/bigger"
            android:onClick="BiggerClick"
            android:layout_gravity="end"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_equals"
            android:text="@string/equals"
            android:onClick="EqualsClick"
            android:layout_gravity="end"/>
    </LinearLayout>

</LinearLayout>